[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpaystack"
version = "0.1.3"
description = "A smart, strategy-based, multi-currency Paystack SDK for Python."
readme = "README.md"
authors = [{ name = "Fidelis Chukwunyere", email = "fidelchukwunyere@gmail.com" }]
license = "MIT"
keywords = ["paystack", "payments", "fintech", "africa", "api", "wrapper"]
dependencies = ["requests>=2.25.1"]
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/fidel-c/smartpaystack"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartpaystack*"]